k8s/overlays/cdc-event-sourcing/patches/oauth2-proxy-errors-authz-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy-errors-authz
spec:
  errors:
    service:
      name: "oauth2-proxy"
      namespace: "security"
      port: 80
    query: "/oauth2/sign_in?rd={url}"
